--- a/frontend/home.html
+++ b/frontend/home.html
@@ -1,72 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MySQL Dashboard</title>
-    <link rel="stylesheet" href="home.css">
+  <meta charset="UTF-8">
+  <title>MySQL Dashboard</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #f8f9fa;
+    }
+    .table-hover tbody tr {
+      cursor: pointer;
+      transition: background-color 0.2s;
+    }
+    .table-hover tbody tr:hover {
+      background-color: #e7f1ff;
+    }
+  </style>
 </head>
+<body class="p-4">
+  <div class="container">
+    <h1 class="text-center mb-5 text-primary fw-bold">MySQL Dashboard</h1>
 
-<body>
-    <h1>MySQL Dashboard</h1>
+    <!-- Status Message -->
+    <div id="status" class="alert alert-info text-center">Loading data...</div>
 
-    <div class="container">
-        <div id="status" class="loading">Loading data...</div>
-        <div class="user-header">
-            <h2>📚 Databases</h2>
-            <button id="addDatabase">Add Database</button>
-        </div>
-        <table id="dbTable">
-            <thead>
-                <tr>
-                    <th>No</th>
-                    <th>Database Name</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-
-        <div class="user-header">
-            <h2>👤 Users</h2>
-            <button id="addUser">Add User</button>
-        </div>
-        <table id="userTable">
-            <thead>
-                <tr>
-                    <th>No</th>
-                    <th>User</th>
-                    <th>Host</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
+    <!-- Databases Section -->
+    <div class="d-flex justify-content-between align-items-center mb-3">
+      <h2 class="fw-semibold text-primary">📚 Databases</h2>
+      <button id="addDatabase" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addDatabaseModal">
+        ➕ Add Database
+      </button>
     </div>
 
-    <!-- Add User Modal -->
-    <div id="addUserModal" class="modal">
-        <div class="modal-content">
-            <h3>Add New User</h3>
-            <label>Username:</label>
-            <input type="text" id="newUsername" placeholder="Enter username" />
-
-            <label>Password:</label>
-            <input type="password" id="newPassword" placeholder="Enter password" />
-
-            <label>Host:</label>
-            <input type="text" id="newHost" placeholder="e.g. localhost or %" />
-
-            <label>Database:</label>
-            <input type="text" id="newDatabase" placeholder="Database to grant access" />
-
-            <div class="modal-buttons">
-                <button id="createUserBtn">Create User</button>
-                <button id="cancelUserBtn" class="cancel">Cancel</button>
-            </div>
-        </div>
+    <div class="table-responsive mb-5">
+      <table id="dbTable" class="table table-striped table-hover shadow-sm rounded">
+        <thead class="table-dark">
+          <tr>
+            <th>No</th>
+            <th>Database Name</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
     </div>
 
-    <script src="home.js"></script>
+    <!-- Users Section -->
+    <div class="d-flex justify-content-between align-items-center mb-3">
+      <h2 class="fw-semibold text-primary">👤 Users</h2>
+      <button id="addUser" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addUserModal">
+        ➕ Add User
+      </button>
+    </div>
+
+    <div class="table-responsive">
+      <table id="userTable" class="table table-striped table-hover shadow-sm rounded">
+        <thead class="table-dark">
+          <tr>
+            <th>No</th>
+            <th>User</th>
+            <th>Host</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
+  </div>
+
+  <!-- Add User Modal -->
+  <div class="modal fade" id="addUserModal" tabindex="-1" aria-labelledby="addUserModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content shadow">
+        <div class="modal-header">
+          <h5 class="modal-title fw-bold" id="addUserModalLabel">Add New User</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="mb-3">
+            <label class="form-label">Username</label>
+            <input type="text" class="form-control" id="newUsername" placeholder="Enter username">
+          </div>
+          <div class="mb-3">
+            <label class="form-label">Password</label>
+            <input type="password" class="form-control" id="newPassword" placeholder="Enter password">
+          </div>
+          <div class="mb-3">
+            <label class="form-label">Host</label>
+            <input type="text" class="form-control" id="newHost" placeholder="e.g. localhost or %">
+          </div>
+          <div class="mb-3">
+            <label class="form-label">Database</label>
+            <input type="text" class="form-control" id="newDatabase" placeholder="Database to grant access">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" id="cancelUserBtn" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" id="createUserBtn" class="btn btn-primary">Create User</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Add Database Modal -->
+  <div class="modal fade" id="addDatabaseModal" tabindex="-1" aria-labelledby="addDatabaseModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content shadow">
+        <div class="modal-header">
+          <h5 class="modal-title fw-bold" id="addDatabaseModalLabel">Add New Database</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="mb-3">
+            <label class="form-label">Database Name</label>
+            <input type="text" class="form-control" id="newDatabaseName" placeholder="Enter database name">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" id="cancelDatabaseBtn" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" id="createDatabaseBtn" class="btn btn-success">Create Database</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="home.js"></script>
 </body>
-
 </html>
